force-app/main/default/objects/Footer_Link__mdt/Footer_Link__mdt.object-meta.xml
<CustomObject>
    <description>This custom setting will contain the href, target, label to display on the footer section on the SIB_Template page.</description>
    <label>Footer Link</label>
    <pluralLabel>Footer Links</pluralLabel>
</CustomObject>