force-app/main/default/objects/Footer_Link__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will define whether or not the link should display on the template page.</description>
    <inlineHelpText>This field will define whether or not the link should display on the template page.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>