force-app/main/default/objects/Footer_Link__mdt/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>This field will house the target you wish to display in the "target" on the &lt;a> tag. Please note: values from the following link are valid markup:

https://www.w3schools.com/tags/att_a_target.asp</description>
    <inlineHelpText>This field will house the target you wish to display in the "target" on the &lt;a> tag. Please note: values from the following link are valid markup:

https://www.w3schools.com/tags/att_a_target.asp</inlineHelpText>
    <label>Target</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>