force-app/main/default/objects/Footer_Link__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>This field will house the URL you wish to display in the "href" tag on the &lt;a> tag.</description>
    <inlineHelpText>This field will house the URL you wish to display in the "href" tag on the &lt;a> tag.</inlineHelpText>
    <label>URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>